# bestiazwroclawia

./: .gitignore  .gitmodules  README.md  README.txt  engine.py  engine_commands.py  main.py  mcts.py  search.py  search_commands.py  time_management.py  uci_commands.py  uci_input_parser.py
.github/workflows/: clang-format-check.yml  compile.yml
BS_klu/dataset/: dataset_management.py  unit_tests.ipynb
alfa/: README.md  alfa.py  board_interface.py  commands_data.py  engine.py  eval.py  log_example.txt  main.py  search.py  uci_input.py  zorba.py
cpp_bestia/: .clang-format  CMakeLists.txt
cpp_bestia/app/: CMakeLists.txt  main.cpp
cpp_bestia/include/: chess.hpp  engine.hpp  heuristic.hpp  position.hpp  search.hpp  tt.hpp  uci.hpp
cpp_bestia/src/: CMakeLists.txt  engine.cpp  heuristic.cpp  position.cpp  search.cpp  tt.cpp  uci.cpp
cpp_bestia/test/: CMakeLists.txt  heur_test.cpp  tt_test.cpp
mldl/: Chess.ipynb  README.md  chess_LR_pytorch.ipynb  chess_LR_seed.ipynb  classifiers.ipynb  data_generate.ipynb  general.ipynb  generate_database.py  requirements.txt  utils.py
nn/: data_loader.ipynb  generate_data.ipynb  train.ipynb
nn/models/: model_128_1_0.1_0.9_69.49  model_16_1_0.1_0.9_65.40  model_32_1_0.1_0.9_69.21  model_64_1_0.1_0.9_63.48  simple_model
old/alfa/: commands_data.py  engine.py  eval.py  main.py  uci_output.py  zorba.py
old/seed_klu/: search.py  uci.py
old/sweeper_alu/: eval.cpp  eval.h  main.cpp  position.cpp  position.h  types.h
rust_mbu/: silniki_rust.md
rust_mbu/playtest/: 10openings.epd  25openings.epd  50openings.epd  722openings.epd  90openings.epd  (+10 more)
rust_mbu/rust_engine/engine/: Cargo.toml
rust_mbu/rust_engine/engine/src/: main.rs  uci.rs
rust_mbu/rust_engine/engine/src/core/: evaluate.rs  mod.rs  move_list.rs  move_order.rs  principal_variation.rs  search.rs
rust_mbu/rust_engine/engine/src/engine/: engine_options.rs  mod.rs  options.rs
rust_mbu/rust_engine/engine/src/engine/eval/: activity.rs  eval_tables.rs  evaluation_table.rs  king_safety.rs  mod.rs  nnue.rs  pin_bonus.rs  positional_tables.rs
rust_mbu/rust_engine/engine/src/engine/eval/pawns/: isolated.rs  isolated_pawns.rs  mod.rs  protected_passed_pawnes.rs  stacked.rs  stacked_pawns.rs  strong_squares.rs
rust_mbu/rust_engine/engine/src/engine/eval/rooks/: battery.rs  mod.rs  rook_on_open_files.rs
rust_mbu/rust_engine/engine/src/engine/nn/: mod.rs  readcsv.rs
rust_mbu/rust_engine/engine/src/engine/search/: draw.rs  mod.rs  parallel.rs  principal_variation.rs
rust_mbu/rust_engine/engine/src/engine/search/heuristics/: futility_pruning.rs  late_move_pruning.rs  late_move_reduction.rs  mod.rs  move_list.rs  move_order.rs  null_move_reduction.rs  razoring.rs  static_exchange_evaluation.rs  transposition_table.rs
rust_mbu/rust_engine/engine/src/engine/search/utils/: mod.rs  repetition.rs  time_control.rs
rust_mbu/rust_engine/engine/src/engine/tables/: mod.rs
rust_mbu/rust_engine/engine/src/uci/: mod.rs  perft.rs  uci_commands.rs
rust_mbu/rust_engine/move-gen/: Cargo.toml
rust_mbu/rust_engine/move-gen/src/: lib.rs  lookup.rs  tests.rs  xray.rs
rust_mbu/rust_engine/move-gen/src/generators/: mod.rs  movegen.rs
rust_mbu/rust_engine/move-gen/src/generators/pieces/: king_generator.rs  knight_generator.rs  mod.rs  pawn_generator.rs  simple_move_generator.rs  slider_generator.rs
rust_mbu/rust_engine/move-gen/src/move/: king.rs  knights.rs  make_move.rs  mod.rs  move_list.rs  pawns.rs  sliders.rs  undo_move.rs
rust_mbu/rust_engine/move-gen/src/test_cases/: castling.json  famous.json  pawns.json  promotions.json  standard.json  taxing.json
rust_mbu/rust_engine/move-gen/src/utils/: chess_notation.rs  logger.rs  mod.rs
rust_mbu/rust_engine/sdk/: Cargo.toml
rust_mbu/rust_engine/sdk/src/: bitboard.rs  fen.rs  hash.rs  lib.rs  position.rs  square.rs
rust_mbu/rust_engine/sdk/src/lookup/: in_between.rs  king.rs  knights.rs  mod.rs  passers.rs  pawns.rs  rays.rs  sliders.rs  squares_near_king.rs
seed_klu/: README.txt  engine.py  parser_commands.py  uci_output_parser.py
sweeper_alu/: Makefile  README  math.h  parser.cpp  parser.h  search.cpp  search.h  test.cpp
(+168 files in other folders)
