[package]
name = "morphebot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
derivative = "2.2.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15"
ndarray-rand = "0.14"
ndarray-csv = "0.2"
csv = "1.1"
move_gen = { path = "../move-gen" }
sdk = { path = "../sdk" }
rand = "0.8.5"