[package]
name = "move_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
flexi_logger = "0.25.6"
itertools = "0.11.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
sdk = { path = "../sdk" }
serde = "1.0.183"
serde_json = "1.0.104"
simple_logger = "4.2.0"

[build-dependencies]
codegen = "0.2.0"
sdk = { path = "../sdk" }
