[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
colored = "2.0.4"
derivative = "2.2.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
log = "0.4.20"
num_enum = "0.6.1"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
